# ChangeLog for media-gfx/k3d
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.30 2006/10/18 09:35:43 lu_zero Exp $

  18 Oct 2006; Luca Barbato <lu_zero@gentoo.org> k3d-0.6.2.0.ebuild:
  fix useflag

*k3d-0.6.2.0 (16 Oct 2006)

  16 Oct 2006; Luca Barbato <lu_zero@gentoo.org> +k3d-0.6.2.0.ebuild:
  New version, thanks to Mohamed M. Hagag <mohamedhagag1981@gmail.com> for
  keeping the ebuild updated

  05 Jul 2006; Michael Sterrett <mr_bones_@gentoo.org>
  k3d-0.5.0.37-r1.ebuild:
  xml2 use flag changed to xml

  18 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> k3d-0.5.0.37-r1.ebuild:
  Make librsvg a hard dependency for bug 123269. Thanks to Mike Bonar <mwbonar
  at mts dot net>.

*k3d-0.5.0.37-r1 (09 Feb 2006)
*k3d-0.4.5.0 (09 Feb 2006)

  09 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> +k3d-0.4.5.0.ebuild,
  -k3d-0.5.0.33.ebuild, -k3d-0.5.0.34.ebuild, -k3d-0.5.0.37.ebuild,
  +k3d-0.5.0.37-r1.ebuild:
  Add 0.4.5.0, which is the latest stable version. In 0.5.0.37-r1, drop qt and
  javascript as recommended by upstream. Also, add a keepdir to
  /usr/share/k3d/shaders/layered for bug 121678, reported by Daniel Fort <dan
  at digiola dot com>.

*k3d-0.5.0.37 (02 Feb 2006)

  02 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  +files/k3d-0.5.0.37-nls.patch, +k3d-0.5.0.37.ebuild:
  0.5.0.37 version bump.

  02 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> k3d-0.5.0.34.ebuild:
  Make modular X friendly.

  30 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> k3d-0.5.0.34.ebuild:
  Depend on >=x11-libs/gtkglext-1.0.6-r3, since earlier versions do not link
  correctly against pangox.

  30 Jan 2006; Marcelo Goes <vanquirius@gentoo.org>
  +files/k3d-0.5.0.34-nls.patch, k3d-0.5.0.34.ebuild:
  Add Flameeyes's patch to fix nls compilation for bug 112144.

  30 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> -files/va_copy.patch,
  -k3d-0.2.5.4.ebuild, -k3d-0.4.4.0.ebuild, -k3d-0.4.4.2.ebuild,