@@ -1,1 +1,3 @@
 MD5 dfe46f3cfb43159bd5bfcc28ca843cda k3d-0.4.5.0-2.tar.bz2 4379421
+RMD160 0bd1d92b64974aa3a5feba1833adc3f4717161b0 k3d-0.4.5.0-2.tar.bz2 4379421
+SHA256 e9602c48286cedffc09a1b691ae2070af831ac910604cf7d94e056e901dd4ecd k3d-0.4.5.0-2.tar.bz2 4379421
