@@ -1,1 +1,3 @@
 MD5 1e0d26d4867c2f07e25060e295818e21 k3d-0.5.0.37.tar.bz2 4518681
+RMD160 f8c690c5816bf71a892fd380b4ba53fa83b709e6 k3d-0.5.0.37.tar.bz2 4518681
+SHA256 7206ea1c14e6b6c2ed70e7b746394de47554e74bab572bde06924fc07f169516 k3d-0.5.0.37.tar.bz2 4518681
