@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/k3d
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.30 2006/10/18 09:35:43 lu_zero Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/k3d/ChangeLog,v 1.31 2007/01/04 23:07:18 beandog Exp $
+
+  04 Jan 2007; Steve Dibb <beandog@gentoo.org> k3d-0.4.5.0.ebuild,
+  k3d-0.5.0.37-r1.ebuild, k3d-0.6.2.0.ebuild:
+  Fix graphviz deps, bug 142726
 
   18 Oct 2006; Luca Barbato <lu_zero@gentoo.org> k3d-0.6.2.0.ebuild:
   fix useflag
